// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`generateEvaluatorClass snapshots snapshot: single boolean flag 1`] = `
"class GeneratedEvaluator extends WorkerSafeGeneratedEvaluator {
  constructor(spanContext, evaluator) {
    super(spanContext, evaluator, SCHEMA, validateFlagValue, ENTRY_TYPE_FF_ACCESS);
  }

  forContext(ctx) {
    return new GeneratedEvaluator(ctx, this.evaluator);
  }
}

Object.defineProperties(GeneratedEvaluator.prototype, {
  debugMode: {
    configurable: true,
    enumerable: false,
    get() {
      return this.getFlag('debugMode');
    },
  }
});"
`;

exports[`generateEvaluatorClass snapshots snapshot: multiple flags of different types 1`] = `
"class GeneratedEvaluator extends WorkerSafeGeneratedEvaluator {
  constructor(spanContext, evaluator) {
    super(spanContext, evaluator, SCHEMA, validateFlagValue, ENTRY_TYPE_FF_ACCESS);
  }

  forContext(ctx) {
    return new GeneratedEvaluator(ctx, this.evaluator);
  }
}

Object.defineProperties(GeneratedEvaluator.prototype, {
  debugMode: {
    configurable: true,
    enumerable: false,
    get() {
      return this.getFlag('debugMode');
    },
  },
  maxRetries: {
    configurable: true,
    enumerable: false,
    get() {
      return this.getFlag('maxRetries');
    },
  },
  logLevel: {
    configurable: true,
    enumerable: false,
    get() {
      return this.getFlag('logLevel');
    },
  }
});"
`;

exports[`generateEvaluatorClass snapshots snapshot: async flags 1`] = `
"class GeneratedEvaluator extends WorkerSafeGeneratedEvaluator {
  constructor(spanContext, evaluator) {
    super(spanContext, evaluator, SCHEMA, validateFlagValue, ENTRY_TYPE_FF_ACCESS);
  }

  forContext(ctx) {
    return new GeneratedEvaluator(ctx, this.evaluator);
  }
}

Object.defineProperties(GeneratedEvaluator.prototype, {
  asyncFeature: {
    configurable: true,
    enumerable: false,
    get() {
      return this.getFlag('asyncFeature');
    },
  },
  asyncLimit: {
    configurable: true,
    enumerable: false,
    get() {
      return this.getFlag('asyncLimit');
    },
  }
});"
`;

exports[`generateEvaluatorClass snapshots snapshot: custom class name 1`] = `
"class CustomFeatureFlagEvaluator extends WorkerSafeGeneratedEvaluator {
  constructor(spanContext, evaluator) {
    super(spanContext, evaluator, SCHEMA, validateFlagValue, ENTRY_TYPE_FF_ACCESS);
  }

  forContext(ctx) {
    return new CustomFeatureFlagEvaluator(ctx, this.evaluator);
  }
}

Object.defineProperties(CustomFeatureFlagEvaluator.prototype, {
  testFlag: {
    configurable: true,
    enumerable: false,
    get() {
      return this.getFlag('testFlag');
    },
  }
});"
`;

exports[`generateEvaluatorClass snapshots snapshot: many flags 1`] = `
"class GeneratedEvaluator extends WorkerSafeGeneratedEvaluator {
  constructor(spanContext, evaluator) {
    super(spanContext, evaluator, SCHEMA, validateFlagValue, ENTRY_TYPE_FF_ACCESS);
  }

  forContext(ctx) {
    return new GeneratedEvaluator(ctx, this.evaluator);
  }
}

Object.defineProperties(GeneratedEvaluator.prototype, {
  flag1: {
    configurable: true,
    enumerable: false,
    get() {
      return this.getFlag('flag1');
    },
  },
  flag2: {
    configurable: true,
    enumerable: false,
    get() {
      return this.getFlag('flag2');
    },
  },
  flag3: {
    configurable: true,
    enumerable: false,
    get() {
      return this.getFlag('flag3');
    },
  },
  flag4: {
    configurable: true,
    enumerable: false,
    get() {
      return this.getFlag('flag4');
    },
  },
  flag5: {
    configurable: true,
    enumerable: false,
    get() {
      return this.getFlag('flag5');
    },
  }
});"
`;
